<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="edu.chapman.lowe121.carinfo.activities.ModelDetailActivity">

    <LinearLayout
        android:id="@+id/activity_model_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/placeholder"
            android:textSize="20sp" />

        <NumberPicker
            android:id="@+id/style_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/style_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/carImage"
            android:visibility="gone" />

        <TextView
            android:id="@+id/price_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/price_details"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/price_msrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/placeholder"
            android:visibility="gone" />

        <TextView
            android:id="@+id/price_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/placeholder"
            android:visibility="gone" />

        <TextView
            android:id="@+id/price_tradein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/placeholder"
            android:visibility="gone" />

        <TextView
            android:id="@+id/engine_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/engine_details"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/engine_horsepower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/placeholder"
            android:visibility="gone" />

        <TextView
            android:id="@+id/engine_torque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/placeholder"
            android:visibility="gone" />

        <TextView
            android:id="@+id/engine_fuelType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/placeholder"
            android:visibility="gone" />

        <TextView
            android:id="@+id/engine_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/placeholder"
            android:visibility="gone" />

        <TextView
            android:id="@+id/engine_cylinder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/placeholder"
            android:visibility="gone" />

        <TextView
            android:id="@+id/transmission_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/transmission_details"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/transmission_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/placeholder"
            android:visibility="gone" />

        <TextView
            android:id="@+id/transmission_speeds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/placeholder"
            android:visibility="gone" />


    </LinearLayout>
</ScrollView>
